--- a/templates/product/new.html.twig
+++ b/templates/product/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Product{% endblock %}
 
 {% block body %}
+    <div class="container">
     <h1>Create new Product</h1>
 
     {{ include('product/_form.html.twig') }}
 
     <a href="{{ path('app_product_index') }}">back to list</a>
+    </div>
 {% endblock %}
