Creation CRUD + Integration Template
AssilMaalel

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,126 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <meta charset="UTF-8">
+        <!-- mobile metas -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <!-- bootstrap css -->
+            <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
+            <!-- style css -->
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+            <!-- Responsive-->
+            <link rel="stylesheet" href="{{ asset('css/responsive.css') }}">
+            <!-- fevicon -->
+            <link rel="icon" href="{{ asset('images/fevicon.png') }}" type="image/gif" />
+            <!-- Scrollbar Custom CSS -->
+            <link rel="stylesheet" href="{{ asset('css/jquery.mCustomScrollbar.min.css')}}">
+            <!-- Tweaks for older IEs-->
+            <link rel="stylesheet" href="{{ asset('https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css') }}">
+            <!-- owl stylesheets -->
+            <link rel="stylesheet" href="{{ asset('css/owl.carousel.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/owl.theme.default.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css') }}" media="screen">
         {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    
+                    <!--
+                    <li class="nav-item">
+                        <a class="nav-link" href="health.html">Health</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="medicine.html">Medicine</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="news.html">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="client.html">Client</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><img src="{{ asset('images/search-icon.png') }}"></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class ="container">
+    
+    {% block home1 %}
+        {% endblock %}
+    
+    </div>
+    {% block body %}
+        {% endblock %}
+    <footer>
+    <div class="footer_section layout_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="footer_logo"><a href="index.html"><img src="{{ asset('images/footer-logo.png') }}"></a></div>
+                    <h1 class="adderss_text">Contact Us</h1>
+                    <div class="map_icon"><img src="{{ asset('images/map-icon.png') }}"><span class="paddlin_left_0">Page when looking at its</span></div>
+                    <div class="map_icon"><img src="{{ asset('images/call-icon.png') }}"><span class="paddlin_left_0">+7586656566</span></div>
+                    <div class="map_icon"><img src="{{ asset('images/mail-icon.png') }}"><span class="paddlin_left_0">volim@gmail.com</span></div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <h1 class="adderss_text">Doctors</h1>
+                    <div class="hiphop_text_1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <h1 class="adderss_text">Useful Links</h1>
+                    <div class="Useful_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered ,</div>
+                </div>
+                <div class="col-lg-3 col-sm-6">
+                    <h1 class="adderss_text">Newsletter</h1>
+                    <input type="text" class="Enter_text" placeholder="Enter your Emil" name="Enter your Emil">
+                    <div class="subscribe_bt"><a href="#">Subscribe</a></div>
+                    <div class="social_icon">
+                        <ul>
+                            <li><a href="#"><img src="{{ asset('images/fb-icon.png') }}"></a></li>
+                            <li><a href="#"><img src="{{ asset('images/twitter-icon.png') }}"></a></li>
+                            <li><a href="#"><img src="{{ asset('images/linkedin-icon.png') }}"></a></li>
+                            <li><a href="#"><img src="{{ asset('images/instagram-icon.png') }}"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer section end -->
+    </footer>
+
+        {% block javascripts %}
+            <!-- Javascript files-->
+            <script src="{{ asset('js/jquery.min.js') }}"></script>
+            <script src="{{ asset('js/popper.min.js') }}"></script>
+            <script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
+            <script src="{{ asset('js/jquery-3.0.0.min.js') }}"></script>
+            <script src="{{ asset('js/plugin.js') }}"></script>
+            <!-- sidebar -->
+            <script src="{{ asset('js/jquery.mCustomScrollbar.concat.min.js') }}"></script>
+            <script src="{{ asset('js/custom.js') }}"></script>
+            <!-- javascript -->
+            <script src="{{ asset('js/owl.carousel.js') }}"></script>
+            <script src="{{ asset('https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
