--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -25,7 +25,7 @@
             <tr>
                 <td>{{ user.id }}</td>
                 <td>{{ user.username }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+                <td>{{ user.roles ? user.roles|join(', ') : '' }}</td>
                 <td>{{ user.password }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.fullname }}</td>
