--- a/public/FrontOffice/css/bootstrap.css
+++ b/public/FrontOffice/css/bootstrap.css
@@ -3917,7 +3917,7 @@ input[type="button"].btn-block {
 }
 
 .navbar {
-  position: relative;
+  position:fixed; top:0px; left:0px;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
