--- a/public/FrontOffice/css/style.css
+++ b/public/FrontOffice/css/style.css
@@ -16,7 +16,7 @@
 @import url(animate.min.css);
 @import url(normalize.css);
 @import url(icomoon.css);
-@import url(font-awesome.min.css);
+@import url(css/font-awesome.min.css);
 @import url(meanmenu.css);
 @import url(owl.carousel.min.css);
 @import url(swiper.min.css);
@@ -224,6 +224,7 @@ button {
     padding: 10px 0px 25px 0px;
     background-repeat: no-repeat;
 }
+
 .logo {
     width: 42%;
     float: left;
@@ -234,26 +235,35 @@ button {
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
+    position:fixed; top:0px; left:0px;
     padding-right: 20px;
     padding-left: 20px;
     color: #272a2a;
     font-size: 18px;
 }
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    position:fixed; top:0px; left:0px;
     color: #15e4d0;
 }
-
+.navbarpfixed {
+    position:fixed; top:0px; left:0px;
+}
 .navbar {
+    position:fixed; top:0px; left:0px;
     padding: .5rem 70px;
 }
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     color: #15e4d0;
+    position:fixed; top:0px; left:0px;
+
 }
 
 .banner_section {
     width: 100%;
     float: left;
     padding-bottom: 105px;
+    position:fixed; top:0px; left:0px;
+
 }
 
 .images_1 {
