Fixation du template + controle de saisie + notification
Skander Laghmardi

--- a/templates/base_BACK.html.twig
+++ b/templates/base_BACK.html.twig
@@ -37,7 +37,7 @@
   <header class="main-header">
 
     <!-- Logo -->
-    <a href="back" class="logo">
+    <a href="/back" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>LT</span>
       <!-- logo for regular state and mobile devices -->
@@ -340,6 +340,29 @@
           <ul class="treeview-menu">
             <li><a href="/user"><i class="fa fa-circle-o"></i> List Utilisateur </a></li>
           </ul>
+        </li>
+        <li class="active treeview menu-open">
+          <a href="#">
+            <i class="fa fa-dashboard"></i> <span>Dashboard Commande</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/affichecommmande"><i class="fa fa-circle-o"></i> List Commande </a></li>
+          </ul>
+        </li>
+        <li class="active treeview menu-open">
+          <a href="#">
+            <i class="fa fa-dashboard"></i> <span>Dashboard Produit</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/products"><i class="fa fa-circle-o"></i> List Produit </a></li>
+          </ul>
+          <li class="active"><a href="/home"><i class="fa fa-link"></i> <span>Return to the homepage</span></a></li>
         </li>
       </ul>
     </section>
