--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
+
 {% block content %}
+
         <section class="bg-light p-3 mt-5">
             <h1>Votre panier</h1>
         </section>
@@ -51,7 +53,7 @@
                 </td>
             </tr>
             <tr>
-                <a href="{{path("app_products_index")}}" class="btn btn-secondary mb-2">Continuer votre achat
+                <a href="{{path("store")}}" class="btn btn-secondary mb-2">Continuer votre achat
                     <i class="bi bi-cart-x"></i>
                 </a>
             </tr>
