--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="container">
-    <h1>Product index</h1>
+    <h1>Product List</h1>
         <section class="content">
             <div class="container-fluid">
                 <div class="row">
