Implementation des metiers (paginator bundle + tri)
Assil Maalel

--- a/templates/user/listByUsername.html.twig
+++ b/templates/user/listByUsername.html.twig
@@ -5,24 +5,6 @@
 {% block body %}
     <h1>User index</h1>
 
-    <a href="{{ path('bymail') }}" class="nk-btn nk-btn-rounded nk-btn-color-white"  >
-                            <span>Sort By Mail</span>
-                            <span class="icon"><i class="ion-paper-airplane"></i></span>
-                    </a>
-    <a href="{{ path('byusername') }}" class="nk-btn nk-btn-rounded nk-btn-color-white"  >
-                            <span>Sort By Username</span>
-                            <span class="icon"><i class="ion-paper-airplane"></i></span>
-                    </a>                
-    <a href="{{ path('listUserVerified') }}" class="nk-btn nk-btn-rounded nk-btn-color-white"  >
-                            <span>Sort By Verification</span>
-                            <span class="icon"><i class="ion-paper-airplane"></i></span>
-                    </a>
-    <a href="{{ path('listUserBanned') }}" class="nk-btn nk-btn-rounded nk-btn-color-white"  >
-                            <span>Sort By Ban Status</span>
-                            <span class="icon"><i class="ion-paper-airplane"></i></span>
-                    </a>
-    
-
     <table class="table">
         <thead>
             <tr>
@@ -39,7 +21,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for user in pagination %}
+        {% for user in UserByUsername %}
             <tr>
                 
                 <td>{{ user.username }}</td>
@@ -70,22 +52,6 @@
                             <span>Edit Role</span>
                             <span class="icon"><i class="ion-paper-airplane"></i></span>
                     </a>
-                    {% if user.isBanned is not empty and user.isBanned %}
-
-
-
-                                    <form method="post" action="{{ path('user_unban', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to unban this User?');">
-                                    <input type="hidden" name="_token" value="{{ csrf_token('unban' ~ user.id) }}">
-                                    <button class="dropdown-item text-danger"><i class="fa fa-trash mr-1"></i>UnBan</button>
-                                    </form>
-
-                                    {% else %}
-
-                                    <form method="post" action="{{ path('user_ban', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to ban this User?');">
-                                    <input type="hidden" name="_token" value="{{ csrf_token('ban' ~ user.id) }}">
-                                    <button class="dropdown-item text-danger"><i class="fa fa-trash mr-1"></i>Ban</button>
-                                    </form>
-                                    {% endif %}
                 </td>
             </tr>
         {% else %}
@@ -95,5 +61,4 @@
         {% endfor %}
         </tbody>
     </table>
-    {{ knp_pagination_render(pagination) }}
 {% endblock %}
