--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -8,20 +8,20 @@
                 
                 <th>Quantité</th>
                 <th>IdCommande</th>
-                <th>IdProduit</th>
+                <th>Nom du Produit</th>
                 <th>Price</th>
                 
 
             </tr>
             </thead>
             <tbody>
-            {% for commandes in commandes %}
+            {% for commandes in pagination %}
                 <tr>
                     
                     <td>{{ commandes.Quantite  }}</td>
                     <td>{{ commandes.commande.id }}</td>
-                    <td>{{ commandes.produit.id }}</td>
-                    <td>{{ commandes.Price }}</td>
+                    <td>{{ commandes.produit.title }}</td>
+                    <td>{{ commandes.Price }}dt</td>
                     
                 </tr>
                 
@@ -30,6 +30,8 @@
             </tbody>
 
         </table>
+        {{ knp_pagination_render(pagination)}}
+        <a href="/imprimer">Imprimer</a><a href="/stats">Statistiques</a>
         
                             
     {% endblock %}
