--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,5 +38,8 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
+    <a class="btn btn-lg btn-primary" href="/reset-password">
+        Reset Password
+    </a>
 </form>
 {% endblock %}
