Add::Mobile link

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
             <!-- bootstrap css -->
             <link rel="stylesheet" href="{{ asset('FrontOffice/css/bootstrap.min.css') }}">
             <!-- style css -->
-            <link rel="stylesheet" href="{{ asset('FrontOffice/css/style.css') }}">
+            <!-- <link rel="stylesheet" href="{{ asset('FrontOffice/css/style.css') }}"> -->
             <!-- Responsive-->
             <link rel="stylesheet" href="{{ asset('FrontOffice/css/responsive.css') }}">
             <!-- fevicon -->
