--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -14,12 +14,12 @@
                 <td class="text-black-50">{{ product.ProductName }}</td>
             </tr>
             <tr>
-                <th>About</th>
-                <td>{{ product.ProductDescription }}</td>
+                <th class ="text-black-50">About</th>
+                <td class="text-black-50">{{ product.ProductDescription }}</td>
             </tr>
             <tr>
-                <th>Price</th>
-                <td>{{ product.ProductPrice }}TND</td>
+                <th class="text-black-50">Price</th>
+                <td class="text-black-50">{{ product.ProductPrice }}TND</td>
             </tr>
 
             <tr>
