--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -64,6 +64,7 @@
 
 
         <button> <a href="{{ path('pdfp')}}" class="btn btn-primary">PDF</a></button>
+        <button> <a href="{{ path('stats_p')}}" class="btn btn-primary">STATS</a></button>
 
         <table class="table">
         <thead>
